--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +19,7 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "sequelize-cli": "^6.2.0"
   }
 }
