--- a/api/package.json
+++ b/api/package.json
@@ -8,13 +8,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "passport-local": "^1.0.0",
+    "passport-local-sequelize": "^0.9.0",
     "pg": "^8.4.2",
     "sequelize": "^6.3.5"
   },
