--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
     "pg": "^8.4.2",
     "sequelize": "^6.3.5"
   },
