--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.4.2",
+    "react-multiple-datepicker": "^0.1.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
