--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-multiple-datepicker": "^0.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "recharts": "^1.8.5",
