--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
@@ -20,7 +21,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.4.2",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react-multiple-datepicker": "^0.1.0",
     "sequelize": "^6.3.5"
   },
