--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "build": "cd client && npm run build",
   "install-client": "cd client && npm install",
   "heroku-postbuild": "npm run install-client && npm run build",
-  "start": "cd client && npm start & cd api && npm start",
+  "start": "cd client && npm start",
   "test": "jest",
   "test:watch": "jest --watch"
   } 
