--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
   "build": "cd client && npm run build",
   "install-client": "cd client && npm install",
-  "heroku-postbuild": "npm run install-client && npm run build",
+  "install-server": "cd api && npm install",
+  "heroku-postbuild": "npm run install-server && npm run install-client && npm run build",
   "start": "cd api && npm start",
   "test": "jest",
   "test:watch": "jest --watch"
