--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "d3": "^6.2.0",
+    "material-design-icons": "^3.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-datetime-picker": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-multiple-datepicker": "^0.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "recharts": "^1.8.5",
