--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "save": "^2.4.0",
     "web-vitals": "^0.2.4"
   },
+  "proxy": "http://localhost:9000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
